# esflow

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: _config.yml  artifacts.md  cli.md  debug.md  events.md  how_to_release.md  index.md  next_plan.md  pass_check.md  quickstart.md  roadmap.md  semantics.md  usage.md
docs/ref/: CheckResult.md  Checkpoint.md  DepthScope.md  FanOut.md  FlowDefine.md  FlowLoadError.md  JobEvent.md  JobState.md  Node.md  README.md  Runner.md
easyflow/: __init__.py  __main__.py  check.py  cli.py  event.py  flow.py  htmlview.py  loader.py  node.py  runner.py  state.py  step.py
esflow/: __init__.py  __main__.py  check.py  cli.py  entrypoint.py  event.py  flow.py  htmlview.py  loader.py  node.py  runner.py
examples/agent_fanout_flow/: flow.py  run.py
examples/agent_fanout_flow/nodes/: report.py  review_by_subagent.py  split.py
examples/agent_flow/: flow.py
examples/agent_flow/nodes/: agent_summary.py  export.py  gen_task.py
examples/fanout_dynamic/: flow.py
examples/fanout_dynamic/nodes/: ingest.py  merge.py  split.py  worker.py
examples/fanout_flow/: flow.py
examples/fanout_flow/nodes/: fetch.py  merge.py  worker.py
examples/ocr_flow/: flow.py  run.py
examples/ocr_flow/nodes/: export.py  ingest.py  ocr.py  preprocess.py
examples/quickstart_flow/: flow.py
examples/quickstart_flow/nodes/: export.py  fetch.py  process.py  review.py
examples/skip_flow/: flow.py
examples/skip_flow/nodes/: done.py  fetch_from_bili.py  fetch_from_ssr.py  fetch_from_wechat.py  merge.py  parse_to_html.py  parse_to_md.py  trigger.py
examples/student_exam_flow/: flow.py
examples/student_exam_flow/nodes/: publish_paper.py  register.py  review.py  student.py  teacher_leave.py
tests/: sample_exc.py  test_cli.py  test_debug.py  test_dynamic.py  test_fanout.py  test_runner.py  test_skip.py
tools/: build.sh  check.sh
