[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "easyflow"
version = "0.1.0"
description = "轻量 Python DAG workflow 框架,代码声明节点,人机协作控制循环"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[project.scripts]
easyflow = "easyflow.cli:main"

[tool.setuptools.packages.find]
include = ["easyflow*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
