[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "esflow"
version = "0.1.3"
description = "轻量 Python DAG workflow 框架,代码声明节点,人机协作控制循环"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["dag", "workflow", "pipeline", "async", "checkpoint", "fanout", "human-in-the-loop", "agent", "to-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/gitByEOS/esflow"
Repository = "https://github.com/gitByEOS/esflow"
Issues = "https://github.com/gitByEOS/esflow/issues"
Changelog = "https://github.com/gitByEOS/esflow/blob/master/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[project.scripts]
esflow = "esflow.cli:main"

[tool.setuptools.packages.find]
include = ["esflow*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
